--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 index:
     path: /
     controller: App\Controller\DefaultController::index
+
+app_annotations:
+    # loads routes from the PHP annotations of the controllers found in that directory
+    resource: 'App\IB\EmailSubscribeBundle\Controller\SubscribeFormController'
+    type:     annotation
